# smway-forecasting

./: Makefile  README.md  pyproject.toml
report/: FORECASTING_MODELING.md  QUERIES_PRESENTATION.md
src_forecasting/: forecast_emission.ipynb
src_sql_test/: db_query_runner.py  sql_tech_test.sql
